fixed link transitions, spacing and border

--- a/source/assets/stylesheets/_footer.scss
+++ b/source/assets/stylesheets/_footer.scss
@@ -9,7 +9,7 @@ footer {
   
   /* appearance */
   background-color: #2A363B; /* gray */
-  box-shadow: 2px -2px 30px #000;
+  box-shadow: 2px -2px 20px #000;
 }
 
 .footer_wrap {
